# FSDS

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  env.yml  housing-app-pod.yaml  housinglib-0.0.1-py3-none-any.whl  nonstandardcode.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
artifacts/: imputer.pkl
artifacts/model/: MLmodel  requirements.txt
data/processed/: train_set.csv
mlruns/0/: meta.yaml
mlruns/0/09e405055bc84e75b042eb133f57ef40/: meta.yaml
mlruns/0/12c33291b29e439cb4f48199300a0171/: meta.yaml
mlruns/0/275d1c9add3a4ee693233ea081d7b48d/: meta.yaml
mlruns/0/36ac8d67a2bf483b86450bee8e2cb0e1/: meta.yaml
mlruns/0/596325d159aa4a41b3d1c3a20690184b/: meta.yaml
mlruns/0/73dd1f6e6010441a96ac09cabba30207/: meta.yaml
mlruns/0/8c9e5f5d1f8f4941884a57ad6f5cf547/: meta.yaml
mlruns/0/8f92edcbaeab4e36b5168a60490edcbe/: meta.yaml
mlruns/0/968f52eee133450e865cd9e3c4f6e3dd/: meta.yaml
mlruns/0/9faaa5214fd94aa781b2616834df45da/: meta.yaml
mlruns/0/aab50ddf5a9b412d9a7315c9f81fd646/: meta.yaml
mlruns/0/b16c18bff6ac4d5da2de5098164e1ed5/: meta.yaml
mlruns/0/c12c7adee2984fb2bd6eafefe272c720/: meta.yaml
reports/: drift_report.html  drift_report.json
scripts/: inference.py  ingest_data.py  main.py  monitoring.py  score.py  train.py
src/housinglib/: housinglib.py
src/housinglib/housinglib.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
tests/: conftest.py
tests/functional_tests/: test_e2e_pipeline.py  test_installation.py  test_scoring.py  test_training.py
tests/unit_tests/: test_data_ingestion.py
(+24 files in other folders)
