[project]
name = "housinglib"
version = "0.0.1"
description = "Housing Price Prediction Code Library"
authors = [{name = "Upasana Saha"}]
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
py-modules = ["housinglib"]
package-dir = {"" = "src"}

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true